# weavedb

./: *shell*  .gitignore  .gitmodules  Makefile  README.md  build.js  build2.js  cli.js  env.mk.sample  hyperbeam.sh  package-lock.json  package.json  test.js  webauthn.js
.db/: data-g7U4wRei3rsjrfgNnx8tT9PN7HNj1R-1gKUn-RQEjSs  db.sqlite
.shit/: data-qbLoTJChagNHh0Rbi8DXUXD1lt7aGf0cDKZfqMqUKyE  db.sqlite
.what/: data-X3aXgfz3ssqYG5zmmkRf-uEAiL1u-aoJQgfgyd3OAqk  data-hdpy5WbErd2BfuPkPsrPma57WEHDmDLFZ2SW8XJi06A  data-rtnF6aeuNZBnWC2TxlpFCBLUc-wONIbGu3BX3IRUJhI  data-yXhUTUTf8AHTWUyizQIe4hEuxF5LaOqosyK3y2Kee6w  db.sqlite
base/: index.js  package.json
cli/: package.json
client/: index.js  light-client-test.js  package.json
console/: .bitmap  .gitignore  .nowignore  client_test.js  nd.js  next.config.js  package.json  vercel.json
core/: .gitignore  package-lock.json  package.json  sst.min.js  sst.min.js.br  test.js
dist2/: webauthn.js
docker/: .gitignore  docker-compose.yml
docs/: README.md  docusaurus.config.js  package.json  vocs.config.ts
explorer/: Dockerfile  Makefile  docker-compose.yaml  package.json  start-explorer.sh
grpc-node/: .env.sample  .gitignore  Makefile  README.md  dc.yml  docker-compose-nostr.yml  docker-compose-standalone-images.yml  docker-compose-standalone-without-sync.yml  docker-compose-standalone.yml  docker-compose-standalone.yml.bak  docker-compose.yml
hb/: cli-esm.js  output.txt  package-lock.json  package.json
index-engine/: README.md  package.json
legacy/: package.json
litepaper/: package.json  vocs.config.ts
lp/: .gitignore  package-lock.json  package.json
monade/: make.js  package.json
node/: docker-compose.yml  package.json
node-client/: index.js  package.json
protocol/: Main.lean  README.md  Weavedb.lean  lake-manifest.json  lakefile.toml
rollup/: Cargo.toml
rollup/src/: auth.rs  benchmark.rs  bpt.rs  build.rs  bundler.rs  cached_bpt.rs  db.rs  db2.rs  device_ext.rs  fpjson_bundle.js  hb_client.rs  http_client.rs  indexer.rs  kv.rs  lib.rs  ls_kv.rs  main.rs  monade.rs  monade_test.rs  normalize.rs  parallel_server.rs  parse.rs  planner.rs  read.rs  server.rs  server_db.rs  sign.rs  tester.rs  transform.rs  verify.rs  verify_nonce.rs  weavedb_device.rs  write.rs
rollup/test/: sample_headers.json
rollup/tests/: diagnose_signer_test.rs  fix_index_auth_test.rs  parallel_server_benchmark.rs  performance_analysis.rs  raw_db_performance.rs  simple_benchmark.rs  test_basic_operations.rs  test_complex_queries.rs  test_index_ownerhsip.rs  test_nonce_verification.rs  test_weavedb.rs  test_weavedb_features.rs  test_weavedb_hyperbeam.rs  weavedb_benchmark.rs
scan/: package-lock.json  package.json
scripts/: add-funds.js  bookmark-calc.js  bookmark-crons.js  bookmark-setup.js  bookmark.js  bundlr-setup.js  deploy-testnet.js  deploy.js  deployBundler.js  deployEXM.js  deployEthereum.js  deployFromSourceTx.js  deployInternetIdentity.js  deployIntmax.js  deployParallel.js  evolve-exm.js  evolve.js  generate-wallet.js  lens-setup.js  lit-setup.js  mod.js  nft-lit-action-setup.js  nft-setup.js  run-bundler.js  run-cu.js  run-hyperbeam.js  run-rollup.js  run-su.js  run-validator.js  run-zk-prover.js  runNode.js  setupDB.js  todo-setup.js  utils.js  wall-setup-exm.js  wall-setup.js
sdk/: .babelrc-cjs  .npmignore  .prettierrc  Makefile  README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
sdk-exm/: index.js  package.json
sdk-exm-web/: index.js  package.json
sdk-node/: index.js  package.json
solidity/: hardhat.config.js  package-lock.json  package.json
test/: _test.js  admin.js  bookmarks.js  bpt.js  bundle-kv.js  bundle.js  common-bpt.js  common.js  dl_circuits.sh  ethereum.js  exm.js  fpjson.js  intercall.js  intmax.js  lens.js  lit.js  litAction.js  nft.js  offchain-bpt.js  offchain-jots.js  offchain-kv.js  offchain-witter.js  offchain.js  polygon-id.js  poseidon.js  test-bpt.js  test-grpc.js  test-kv.js  test-sdk-node.js  test.js  todos.js  util.js  utils-bpt.js  utils.js  wall-exm.js  (+2 more)
(+1910 files in other folders)
