[package]
name = "weavedb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
deno_core = "0.280.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web server
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
http = "1.0"

# HTTP client for HyperBEAM
reqwest = { version = "0.11", features = ["json"] }

# Logging
log = "0.4"

# Utilities
hex = "0.4"
rand = "0.8"
chrono = "0.4"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }

# Ed25519 signatures
ed25519-dalek = "2.0"

# SHA256 for content digest
sha2 = "0.10"

# OpenSSL for RSA signatures
openssl = "0.10"

[dev-dependencies]
http-body-util = "0.1"
bytes = "1.5"
tokio-test = "0.4"