[package]
name = "weavedb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
md5 = "0.7"
hex = "0.4"
openssl = "0.10"

# Time handling
chrono = "0.4"

# HTTP signature verification
http-signature-normalization = "0.5"

# JavaScript runtime for FPJson
deno_core = "0.280.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Random
rand = "0.8"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "weavedb"
path = "src/main.rs"

[lib]
name = "weavedb"
path = "src/lib.rs"

[[test]]
name = "test_weavedb"
path = "tests/test_weavedb.rs"